--- a/project/pp.html
+++ b/project/pp.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Puppy world </title>
   <link rel="stylesheet" href="pp.css">
-  <link rel="stylesheet" href="acid/css/bootstrap.css">
+  <link rel="stylesheet" href="asset/css/bootstrap.css">
 </head>
 <style>
   .d-flex {
@@ -17,18 +17,23 @@
   }
 
   .nav-links {
-    
-   
-  margin-left: 500px;
+
+
+    margin-right: 170px;
     margin-top: 15px;
     align-items: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Lucida Handwriting;
+    padding-top: 2px;
+
   }
 
-  h1 {
+  h2 {
     color: white;
-    font-family: Book Antiqua;
-    margin-left: 50px;
+    font-family: Lucida Handwriting;
+    font-weight: 400;
+    font-style: normal;
+    margin-right: 250px;
+    padding-bottom: 2px;
   }
 </style>
 
@@ -38,9 +43,10 @@
     <nav class="navbar">
       <div class="logo">
         <img
-          src="acid/images/puppy-logo-design-template-dog-creative-sign-pet-veterinary-vector-icon-logotype-78941035.webp"
+          src="asset/images/13logo.jpg"
+          style="height: 40px; width:auto; padding-bottom: 10px;" 
           alt="Puppy Logo" class="logo-img">
-        <h1>PUPPY_WORLD</h1>
+        <h2>PUPPY_WORLD</h2>
       </div>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -58,5 +64,6 @@
   </header>
 
 </body>
+<script src="asset/js/bootstrap.bundle.js"></script>
 
 </html>
